--- a/static/css/home.css
+++ b/static/css/home.css
@@ -8,6 +8,10 @@ body{
     padding-bottom: 20rem;
 }
 
+a{
+    text-decoration: none;
+}
+
 h3{
     color: rgb(44, 44, 44);
 }
@@ -16,14 +20,11 @@ p{
     color: rgb(80, 79, 79);
 }
 
-nav p{
-    color: white;
-    font-size: 25px;
-    padding: 1rem;
-    font-weight: 700;
 
-}
 nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: orange;
     width: 100%;
     height: 80px;
@@ -32,6 +33,46 @@ nav{
 
     margin-top: -23px;
 }
+
+nav p{
+    color: white;
+    font-size: 25px;
+    padding: 1rem;
+    padding-top: 2rem;
+    font-weight: 700;
+
+}
+
+nav img{
+    width: 40px;
+    padding-top: 4rem !important;
+    padding: 2rem;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    min-width: 120px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    color: rgb(80, 79, 79);
+    background-color: rgb(245, 214, 157);
+  }
+
 
 /* main */
 
@@ -70,21 +111,110 @@ nav{
 }
 
 /* filter */
+
 .toggle-div {
     display: none;
-    padding: 10px;
+    padding: 3rem;
+    width: 50rem;
     border: 1px solid #ccc;
+    background-color: rgb(245, 214, 157);
   }
   .close-button {
     float: right;
     cursor: pointer;
+    color: red;
+  }
+  .actual-content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .sections{
+    display: flex;
+    gap: 5rem;
   }
 
+
+  /* Customize the label (the container) */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: orange;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
   /* documents */
 .document-container{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.document-container button{
+    background-color: orange;
+    color: white;
+    padding: 1rem;
+    width: 200px;
+    border: none;
 }
 
 .document-container .title{
@@ -123,6 +253,15 @@ nav{
 }
 
 /* groups */
+
+.groups button {
+    background-color: orange;
+    color: white;
+    padding: 1rem;
+    width: 200px;
+    border: none;
+    margin-bottom: 2rem;
+}
 .groups h1{
     color: orange;
 
@@ -165,9 +304,18 @@ nav{
     display: flex;
     flex-direction: column;
     justify-content: left;
-
     padding: 1rem;
 }
+
+.Requests button {
+    background-color: white;
+    color: orange;
+    padding: 1rem;
+    width: 100px;
+    border: none;
+    margin-bottom: 2rem;
+}
+
 .Requests h2{
     font-size: 1rem;
 }
@@ -200,24 +348,31 @@ nav{
     gap: 1rem;
 }
 
-.supportbtn {
+.orange {
+    background-color: orange;
+}
+
+.white {
+    background-color: white;
+}
+
+/* .supportbtn {
     background-color: white;
     color: orange;
     border: none;
     border-radius: 3rem;
-    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+    font-size: 15px;
     cursor: pointer;
     transition: background-color 0.3s;
   }
 
- .supportbtn.clicked {
+  .supportbtn.clicked {
     background-color: orange;
     color: white;
-  }
+  } */
+  
 .support p{
     margin: 0;
 }
