--- a/static/css/home.css
+++ b/static/css/home.css
@@ -52,9 +52,10 @@ nav img{
 .dropdown {
     position: relative;
     display: inline-block;
-  }
+    cursor: pointer;
+}
 
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     top: 100%;
@@ -64,14 +65,14 @@ nav img{
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
+}
 
-  .dropdown:hover .dropdown-content {
+.dropdown.active .dropdown-content {
     display: flex;
     flex-direction: column;
     color: rgb(80, 79, 79);
     background-color: rgb(245, 214, 157);
-  }
+}
 
 
 /* main */
@@ -308,7 +309,7 @@ nav img{
     padding: 1rem;
     gap: 3rem;
     border-radius: 2rem;
-    background-color: rgb(245, 214, 157);
+   
 }
 
 .Requests button {
@@ -331,6 +332,7 @@ nav img{
     border: 2px solid orange;
     border-radius: 2rem;
     padding: 1rem;
+    background-color: rgb(245, 214, 157);
 }
 .author-group{
     display: flex;
